--- a/aboutMe.html
+++ b/aboutMe.html
@@ -55,18 +55,35 @@
       </nav>
     </header>
 
-    <section class="part-1"></section>
+    <section class="part-1">
+      <div class="title">
+        <h1>Front-End<br />Web Developer</h1>
+        <h6>SASS. JavaScript. React. C#. Java.</h6>
+        <div class="portrait"></div>
+      </div>
+    </section>
+
     <section class="part-2">
       <div class="container" id="container">
         <div class="form-container resume-container">
-          <h1>Resume</h1>
+          <h1>Profile</h1>
           <p></p>
-          <a href="resume.doc" download="Resume">Download</a>
+          <a
+            href="document/LinkedInProfile_DongyeonLEE.pdf"
+            download="LinkedIn-Profile_DongyeonLEE"
+          >
+            Download
+          </a>
         </div>
         <div class="form-container cover-letter-container">
           <h1>Cover Letter</h1>
           <p></p>
-          <a href="coverLetter.doc" download="CoverLetter">Download</a>
+          <a
+            href="/public/document/CoverLetter_DongyeonLEE.pdf"
+            download="Cover-Letter_DongyeonLEE"
+          >
+            Download
+          </a>
         </div>
         <div class="overlay-container">
           <div class="overlay">
@@ -85,7 +102,7 @@
                 I have a good understanding of how programming languages work
                 and what it takes to build a responsive website.
               </p>
-              <button class="layered" id="cover-letter">My Resume</button>
+              <button class="layered" id="cover-letter">My Profile</button>
             </div>
           </div>
         </div>
