--- a/appProjects.html
+++ b/appProjects.html
@@ -63,8 +63,7 @@
       </div>
 
       <div class="main">
-        <h2>Work In Progress</h2>
-        <p>Thank you for stopping by my new website</p>
+        <h2><span>.</span>Work In Progress</h2>
       </div>
     </section>
 
