--- a/appProjects.html
+++ b/appProjects.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="main">
-        <h2><span>.</span>Work In Progress</h2>
+        <h2>Work In Progress</h2>
       </div>
     </section>
 
