--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,6 +20,8 @@
       </div>
 
       <nav class="menu">
+        <div class="x-button"></div>
+
         <div class="menu-showcase">
           <div class="showcase">
             <b>HTML5,<br />CSS, SASS, Bootstrap,<br />JavaScript, and React</b>
@@ -57,6 +59,7 @@
 
     <section class="part-1">
       <div class="title">
+        <br />
         <h1>Front-End<br />Web Developer</h1>
         <h6>SASS. JavaScript. React. C#. Java.</h6>
         <div class="portrait"></div>
