--- a/appProjects.html
+++ b/appProjects.html
@@ -20,6 +20,8 @@
       </div>
 
       <nav class="menu">
+        <div class="x-button"></div>
+
         <div class="menu-showcase">
           <div class="showcase">
             <b>Application Projects</b>
