--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
       </div>
 
       <nav class="menu">
+        <div class="notice-container">
+          <div class="notice">
+            <p>Brand New Websites Are Coming Soon.</p>
+            <h4>| Parallax Scrolling Website.</h4>
+            <h4>| Restaurant Website.</h4>
+            <h4>| eCommerce Website. React JS.</h4>
+          </div>
+          <div class="x-button">Close Notice</div>
+        </div>
+
         <div class="menu-showcase">
           <div class="showcase">
             <b>Welcome To<br />My Completely RESPONSIVE Website</b>
