--- a/webProjects.html
+++ b/webProjects.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Permanent+Marker|Poppins|Amatic+SC&display=swap"
     />
-    <title>Landing Page Design Ideas</title>
+    <title>Web Page Design Ideas</title>
   </head>
   <body>
     <header>
@@ -20,9 +20,11 @@
       </div>
 
       <nav class="menu">
+        <div class="x-button"></div>
+
         <div class="menu-showcase">
           <div class="showcase">
-            <b>Landing Page Design Ideas</b>
+            <b>Web Page Design Ideas</b>
           </div>
         </div>
         <ul class="menu-nav">
