--- a/contactMe.html
+++ b/contactMe.html
@@ -20,6 +20,8 @@
       </div>
 
       <nav class="menu">
+        <div class="x-button"></div>
+
         <div class="menu-showcase">
           <tag href="#" class="showcase">
             leedongyeon516@gmail.com<br />
