--- a/aboutMe.html
+++ b/aboutMe.html
@@ -61,7 +61,7 @@
       <div class="title">
         <br />
         <h1>Front-End<br />Web Developer</h1>
-        <h6>SASS. JavaScript. React. C#. Java.</h6>
+        <h6>SASS. JavaScript. React JS. C#. Java.</h6>
         <div class="portrait"></div>
       </div>
     </section>
